--- a/Daily_Diary/26-06-2025.md
+++ b/Daily_Diary/26-06-2025.md
@@ -1,18 +1,7 @@
-## 📅 Date: 26-06-2025  
+## 📅 Date: 26-06-2025
 
-### 📌 Task Given  
-Start work on designing the UI for the image detection model that will later be integrated into the website.
+### 📌 Work Summary
 
----
-
-### ✅ Work Done  
-- Reached the workplace and met my mentor.  
-- Met a fellow intern who’ll be working on the project too.  
-- Set up a React project and integrated Tailwind CSS for styling.  
-- Started working on the basic UI layout: added image upload input and a placeholder for displaying results.  
-- Did partial coding and arranged project folders.
-
----
-
-### 📌 Note  
-No detailed discussion about project workflow, or detection model was done today — that is planned for tomorrow.
+- Reported to the workplace and met fellow interns.
+- Received a brief overview of the internship project, which involves integrating a web-based data analytics dashboard with an AI model that generates analytical insights.
+- No coding or project setup was done today. Initial workflow discussions and task distribution are scheduled for tomorrow.
