modified the entries

--- a/Daily_Diary/01-07-2025.md
+++ b/Daily_Diary/01-07-2025.md
@@ -1,14 +1,29 @@
-## 📅 Date: 01-07-2025
+# Date: 01-07-2025
 
-### 📌 Work Summary
+## Objectives
+- Understand how to host a React application accessible by other devices on the same local network.
+- Learn techniques to identify the IP address and properly configure network settings.
+- Explore MongoDB hosting on a remote server for database accessibility.
 
-- Deepened understanding of hosting on a local network using Windows commands like `ipconfig` and `ping` to find the correct IP address.
-- Learned how to identify the URL for hosting projects that can only be accessed by devices on the same network.
-- Successfully hosted the project on my phone’s hotspot and connected other devices to it.
-- Made necessary changes to the project to support hosting on different local networks.
-- Learned the process of hosting MongoDB on a server for remote database access.
+## Activities Performed
+- Used Windows networking commands such as `ipconfig` and `ping` to discover the local machine's IP address.
+- Configured the React development server to accept connections from other devices by setting the host to `0.0.0.0`.
+- Tested hosting the project via a mobile hotspot and successfully accessed it from other devices connected to the same network.
+- Implemented changes in the project setup to support local network hosting.
+- Explored and practiced hosting MongoDB on a remote server.
 
-### 📌 Reference
+## Challenges Faced
+- Understanding how local network IP addresses work and ensuring correct firewall and network permissions.
+- Configuring the React development server for external device access while maintaining security.
 
-- Used this helpful guide on Stack Overflow to learn how to run a React app accessible from other computers on the same network:  
-  [How to open a create-react-app from another computer connected to the same network](https://stackoverflow.com/questions/47412363/how-to-open-a-create-react-app-from-another-computer-connected-to-the-same-netwo#:~:text=Simply%20run%20HOST%3D0.0.0.0%20npm%20run%20start.%20Afterwards%20open,add%20--host%200.0.0.0%20option%20to%20script.start%20field.%20Done.)
+## Learnings
+- Gained practical knowledge on configuring development environments for local network accessibility.
+- Improved understanding of network protocols and IP configurations relevant to hosting.
+- Learned procedures for deploying MongoDB on a remote server to enable external connections.
+
+## Next Steps
+- Document the detailed steps for hosting the React app and MongoDB server within the local network.
+- Explore web hosting options and deployment strategies for production environments.
+
+## References
+- [How to open a create-react-app from another computer connected to the same network - Stack Overflow](https://stackoverflow.com/questions/47412363/how-to-open-a-create-react-app-from-another-computer-connected-to-the-same-netwo#:~:text=Simply%20run%20HOST%3D0.0.0.0%20npm%20run%20start.%20Afterwards%20open,add%20--host%200.0.0.0%20option%20to%20script.start%20field.%20Done.)
