--- a/Daily_Diary/26-06-2025.md
+++ b/Daily_Diary/26-06-2025.md
@@ -1,7 +1,21 @@
-## 📅 Date: 26-06-2025
+# Date: 26-06-2025
 
-### 📌 Work Summary
+## Objectives
+- Join the internship program and meet fellow interns.
+- Understand the overall scope and objectives of the internship project.
+- Prepare for initial workflow discussions and task allocation.
 
-- Reported to the workplace and met fellow interns.
-- Received a brief overview of the internship project, which involves integrating a web-based data analytics dashboard with an AI model that generates analytical insights.
-- No coding or project setup was done today. Initial workflow discussions and task distribution are scheduled for tomorrow.
+## Activities Performed
+- Reported to the workplace and connected with fellow interns.
+- Received an overview of the internship project, focusing on integrating a web-based data analytics dashboard with an AI model that generates analytical insights.
+- Participated in initial discussions; no coding or project setup was done today.
+  
+## Challenges Faced
+- No major challenges faced on the first day; mainly observation and orientation.
+
+## Learnings
+- Gained a clear understanding of the internship goals and project scope.
+- Learned about the expected workflow and upcoming tasks.
+
+## Next Steps
+- Attend workflow discussions and participate in task distribution scheduled for tomorrow.
