--- a/Daily_Diary/28-06-2025.md
+++ b/Daily_Diary/28-06-2025.md
@@ -1,9 +1,25 @@
-## 📅 Date: 28-06-2025
+# Date: 28-06-2025
 
-### 📌 Work Summary
+## Objectives
+- Begin frontend development of the data dashboard.
+- Integrate charting components with placeholder data.
+- Prepare the UI layout for visualization of statistics.
 
-- Started working on the frontend and UI for the data dashboard.
-- Created initial page layout and added cards for displaying different charts.
-- Integrated `Recharts.js` charts using **dummy JSON data** on the frontend for now.
-- Implemented `AreaChart`, `BarChart`, and `PieChart` to visualize test statistics.
-- Backend/database connection with MongoDB is planned for later once the UI is done.
+## Activities Performed
+- Started working on the frontend and user interface for the data dashboard.
+- Created the initial page layout including cards to display various charts.
+- Integrated `Recharts.js` charts using dummy JSON data on the frontend.
+- Implemented `AreaChart`, `BarChart`, and `PieChart` components to visualize test statistics.
+- Planned backend and database connection with MongoDB to be integrated after UI completion.
+
+## Challenges Faced
+- Managing layout and responsiveness for multiple chart types.
+- Ensuring proper integration of `Recharts.js` components with dummy data.
+
+## Learnings
+- Gained practical experience using `Recharts.js` for multiple chart types.
+- Improved UI layout skills for data visualization dashboards.
+
+## Next Steps
+- Complete frontend UI with real data connection.
+- Integrate backend with MongoDB for dynamic data retrieval.
