--- a/Daily_Diary/30-06-2025.md
+++ b/Daily_Diary/30-06-2025.md
@@ -1,15 +1,27 @@
-## 📅 Date: 30-06-2025
+# Date: 30-06-2025
 
-### 📌 Work Summary
+## Objectives
+- Understand and plan the next phase of the data dashboard project based on mentor’s instructions.
+- Identify key tasks such as chart implementation and hosting setup within the IITRPR network.
 
-- Received new tasks and objectives from mentor for the next phase of the data dashboard project.
+## Activities Performed
+- Received new tasks and objectives from the mentor for the upcoming phase.
+- Outlined the creation of a BarChart for month-wise data with click events.
+- Began learning how to host MongoDB server for remote access within the IITRPR network.
+- Started preparing documentation for MongoDB hosting steps.
+- Investigated methods for web hosting the dashboard within the IITRPR network.
+- Listed prerequisites for web and database hosting on the IITRPR network.
+- Planned to estimate time requirements for each task and prepare a report.
 
-### 📌 To-Do:
+## Challenges Faced
+- Coordinating multiple new tasks while maintaining project consistency.
+- Understanding network restrictions and hosting protocols in the IITRPR environment.
 
-- Create a **BarChart for month-wise data with click events** to show detailed stats.
-- Learn how to **host the MongoDB server for remote access** within the **IITRPR network**.
-- Prepare and document the **steps required for hosting MongoDB** on the IITRPR network.
-- Explore methods for **web hosting the dashboard within the IITRPR network**.
-- List down and note all the **prerequisites needed for web and database hosting** on the IITRPR network.
+## Learnings
+- Gained clarity on project requirements and hosting challenges.
+- Improved planning skills for complex task breakdowns.
 
-- Planned to estimate the time required for each task and report the breakdown tomorrow.
+## Next Steps
+- Continue with hosting experiments and documentation.
+- Implement the BarChart with interactive features.
+- Finalize time estimates and report progress to mentor.
