--- a/Daily_Diary/27-06-2025.md
+++ b/Daily_Diary/27-06-2025.md
@@ -1,8 +1,23 @@
-## 📅 Date: 27-06-2025
+# Date: 27-06-2025
 
-### 📌 Work Summary
+## Objectives
+- Understand the upcoming task involving creating a data dashboard.
+- Begin exploring charting libraries suitable for the project.
+- Prepare for implementation by learning necessary tools and technologies.
 
-- Met with my professor, who provided a brief about the next task for the internship.
-- The task involves creating a simple data dashboard using random data statistics, which will later be connected to MongoDB.
-- Started exploring how `Recharts.js` works, as it will be used to build the dashboard's charts and visualizations.
-- No practical implementation or coding done yet — just learning and understanding the charting library's components and structure.
+## Activities Performed
+- Met with the professor who briefed about the next internship task.
+- Learned that the task involves building a simple data dashboard with random statistics, eventually connected to MongoDB.
+- Started exploring `Recharts.js` to understand its components and how to build charts and visualizations.
+- No coding or practical implementation was done yet; focus was on understanding the charting library.
+
+## Challenges Faced
+- Initial unfamiliarity with `Recharts.js` components and usage.
+
+## Learnings
+- Gained foundational knowledge of `Recharts.js` and its capabilities.
+- Clarified project expectations and next steps.
+
+## Next Steps
+- Begin implementing the dashboard using `Recharts.js`.
+- Connect dashboard data with MongoDB once basics are clear.
