--- a/Daily_Diary/29-06-2025.md
+++ b/Daily_Diary/29-06-2025.md
@@ -1,10 +1,26 @@
-## 📅 Date: 29-06-2025
+# Date: 29-06-2025
 
-### 📌 Work Summary
+## Objectives
+- Set up the backend server and API for the data dashboard project.
+- Enable communication between frontend charts and MongoDB database.
+- Ensure data is correctly fetched and displayed in real time.
 
-- Completed the **backend setup** for the data dashboard project.
-- Created **API endpoints** to fetch data from **MongoDB** for the charts.
-- Configured **Express.js server** with necessary routes and middleware.
-- Tested all API endpoints using **Postman** to verify correct JSON responses.
-- Integrated backend API with the existing frontend, replacing dummy JSON data with **live data from MongoDB**.
-- Confirmed successful rendering of `AreaChart`, `BarChart`, and `PieChart` using real-time data.
+## Activities Performed
+- Completed backend setup for the data dashboard project.
+- Created API endpoints to fetch data from MongoDB for use in charts.
+- Configured Express.js server with necessary routes and middleware.
+- Tested all API endpoints using Postman to verify correct JSON responses.
+- Integrated backend API with the frontend, replacing dummy JSON data with live data from MongoDB.
+- Confirmed successful rendering of `AreaChart`, `BarChart`, and `PieChart` components with real-time data.
+
+## Challenges Faced
+- Ensuring API routes correctly handle data requests and responses.
+- Handling data format consistency between backend and frontend components.
+
+## Learnings
+- Gained experience in backend development with Express.js and MongoDB.
+- Improved skills in API design and integration with frontend frameworks.
+
+## Next Steps
+- Continue improving data visualization and add interactive features.
+- Optimize API performance and error handling.
