--- a/Daily_Diary/11-07-2025.md
+++ b/Daily_Diary/11-07-2025.md
@@ -3,7 +3,7 @@
 
 
 
-## 📌 Objectives  
+## Objectives  
 
 - Meet with professor to discuss MongoDB server setup and remote access.
 - Learn how to connect to a remote MongoDB server over the IIT Ropar network.
@@ -13,7 +13,7 @@
 
 
 
-## 📌 Activities Performed  
+## Activities Performed  
 
 - Met with professor and received the remote MongoDB server connection string hosted on his system.
 - Successfully learned how to connect to a **remote MongoDB server** using the provided connection URI within the IIT Ropar network.
@@ -27,7 +27,7 @@
 
 
 
-## 📌 Challenges Faced  
+## Challenges Faced  
 
 - Initially faced difficulty understanding how remote database connections work and how to properly configure the connection string.
 - Had to carefully adjust backend code to switch from a local MongoDB instance to the remote server without breaking API endpoints.
@@ -35,7 +35,7 @@
 
 
 
-## 📌 Learnings  
+## Learnings  
 
 - Understood how remote MongoDB connections are established using network-specific connection strings.
 - Learned to modify backend APIs to fetch data from a different MongoDB instance.
@@ -44,7 +44,7 @@
 
 
 
-## 📌 Next Steps  
+## Next Steps  
 
 - Deepen understanding of **PyMongo** and MongoDB query operations using Python.
 - Learn about **NLTK** and **TF-IDF** methods for better text analysis.
@@ -55,6 +55,6 @@
 - Integrate this script into the project workflow, enabling the backend to serve word cloud data directly to the frontend.
 
 
-## 📌 References  
+## References  
 
 - [PyMongo Documentation](https://pymongo.readthedocs.io/en/stable/)
