--- a/Daily_Diary/21-07-2025.md
+++ b/Daily_Diary/21-07-2025.md
@@ -28,7 +28,7 @@
 ## Learnings
 
 - Gained experience in extending reusable UI features across different components.
-- Clarified post-development roadmap (fine-tuning, documentation, public deployment).
+- Clarified post-development roadmap (documentation).
 
 ## Next Steps
 
